--- a/client/trolling.css
+++ b/client/trolling.css
@@ -1,8 +1,8 @@
 /* CSS declarations go here */
 body {
   font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+/*  background-color: #315481;
+  background-image: linear-gradient(to bottom, #315481, #918e82 100%);*/
   background-attachment: fixed;
 
   position: absolute;
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-  max-width: 600px;
+  min-width: 100%;
   margin: 0 auto;
   min-height: 100%;
   background: white;
