--- a/client/trolling.css
+++ b/client/trolling.css
@@ -17,11 +17,21 @@ body {
   font-size: 14px;
 }
 
-.container {
-  min-width: 100%;
-  margin: 0 auto;
-  min-height: 100%;
-  background: white;
+.content {
+    bottom: 80px;
+    top: 100px;
+    overflow: auto;
+    width: 100%;
+    position: fixed;
+}
+
+.footer{
+    position: fixed;
+    bottom: 0px;
+    height: 80px;
+    overflow: hide;
+    padding: 20px 15px 15px 15px;
+    width: 100%;
 }
 
 header {
@@ -29,6 +39,8 @@ header {
   background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
   padding: 20px 15px 15px 15px;
   position: relative;
+  width: 100%;
+  height: 100px;
 }
 
 #login-buttons {
